# FirstPass

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml  firstpass.config.yaml.example  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
backend/: .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: analyze.py  health.py  recommendations.py
backend/app/models/: schemas.py
backend/app/services/: analyzer.py  dwg_converter.py  file_converter.py  pdf_converter.py  recommendation_engine.py  report_generator.py  violation_mapper.py  vision_analyzer.py
backend/tests/: test_analyzer_recommendations.py  test_config.py  test_file_converter.py  test_health.py  test_recommendation_engine.py  test_violation_mapper.py  test_vision_analyzer.py
data/cities/alameda-ca/: chunks.json  meta.json
data/cities/alameda-ca/raw/: municipal_codes.txt  state_codes.txt
data/cities/los-angeles-ca/: chunks.json  meta.json  rules.json
data/cities/los-angeles-ca/raw/: building_code_cbc.txt  city_zoning_lamc.txt  county_code.txt  green_code_calgreen.txt  plumbing_code_cpc.txt  residential_code_crc.txt  state_adu_hcd.txt  state_codes.txt
data/demo/los-angeles-1/viewer/: meta.json
docs/: CHUNKING.md  REDIS_PLAN.md
fixtures/plan_sets/: manifest_partial.json
fixtures/plan_sets/la_adu_partial/: plan_index.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ReportView.tsx  UploadForm.tsx
frontend/src/types/: index.ts
scripts/: band_harvest.mjs  band_research.mjs  build-demo-viewer.mjs  chunk_codes.py  index_codes_redisvl.py  ingest_band_output.py  query_codes_redisvl.py  run_agents.sh  run_workflow_agents.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/cities/: route.ts
src/app/api/projects/: route.ts
src/app/dashboard/: page.tsx
src/app/project/[id]/: page.tsx
src/components/: AgentFeed.tsx  ApsViewer.tsx  BandConversation.tsx  BlackboardPanel.tsx  BlueprintViewer.tsx  FactsList.tsx  FeaturesGrid.tsx  FindingInspector.tsx  FindingsList.tsx  HowItWorks.tsx  LandingHero.tsx  LandingSections.tsx  NewProjectForm.tsx  PhaseRail.tsx  PlanSheetViewer.tsx  ProjectHistory.tsx  Reveal.tsx  RunProgress.tsx  ScoreGauge.tsx  SiteHeader.tsx  SponsorRail.tsx
src/firstpass/: agent_factory.py  archive_tool.py  async_utils.py  band_client.py  browserbase_tool.py  code_sources.py  config.py  jurisdiction.py  local_research.py  models.py  orchestrator.py  parcel_lookup.py  permit_research_tool.py  plan_analysis_tool.py  prompts.py  redis_store.py  report_tool.py  requirements.py  solution_research_tool.py  synthesis.py
src/firstpass/adapters/: __init__.py  compare_codes_band.py
src/firstpass/agents/: building.py  ceo.py  ceo_planner.py  compare.py  green.py  municipal.py  permit.py  plumbing.py  project_property_manager.py  residential.py  solutions.py  state.py  synthesizer.py  visual.py
src/firstpass/permit/: __init__.py  checklists.py  cli.py  models.py  plan_index.py  review.py  tool.py
src/lib/: active-project.ts  anthropic-model.ts  band-output.ts  band-pipeline.ts  city-store.ts  code-db.ts  compliance.ts  corpus-compliance.ts  demo-plan-cache.ts  demo-run.ts  demo-video.ts  dwg-plot-cache.ts  fixtures.ts  pipeline.ts  plan-compliance-agent.ts  plan-facts-cache.ts  plan-facts-display.ts  plan-facts-store.ts  plans-prep.ts  plot-viewer-cache.ts  project-files.ts  project-persistence.ts  store.ts  types.ts  ui.ts
src/lib/integrations/: aps.ts  arize.ts  autocad-da.ts  band-client.ts  band.ts  browserbase.ts  claude.ts  otel.ts
tests/: test_jurisdiction.py  test_permit_research.py  test_permit_review.py  test_requirements.py  test_solution_research.py
(+15 files in other folders)
