[project]
name = "firstpass"
version = "0.1.0"
description = "Multi-agent building code research via Internet Archive + Band"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[anthropic]>=0.1.0",
    "browserbase>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.49.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
firstpass-municipal = "firstpass.agents.municipal:main"
firstpass-state = "firstpass.agents.state:main"
firstpass-building = "firstpass.agents.building:main"
firstpass-residential = "firstpass.agents.residential:main"
firstpass-plumbing = "firstpass.agents.plumbing:main"
firstpass-green = "firstpass.agents.green:main"
firstpass-synthesizer = "firstpass.agents.synthesizer:main"
firstpass-kickoff = "firstpass.orchestrator:main"
firstpass-local = "firstpass.local_research:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firstpass"]
