[project]
name = "firstpass"
version = "0.1.0"
description = "Multi-agent building code research via Internet Archive + Band"
requires-python = ">=3.11"
dependencies = [
    "band-sdk[anthropic]>=0.1.0",
    "browserbase>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.49.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
# RedisVL hybrid (vector + BM25) code retrieval. Pulls in sentence-transformers
# (torch) for local, zero-cost embeddings — heavy, so it's opt-in:
#   uv sync --extra vector
# Required only to (re)build the firstpass:codes index; the app's query path
# degrades to lexical retrieval when the index is absent. See docs/REDIS_PLAN.md.
vector = [
    "redisvl>=0.3.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
firstpass-municipal = "firstpass.agents.municipal:main"
firstpass-state = "firstpass.agents.state:main"
firstpass-synthesizer = "firstpass.agents.synthesizer:main"
firstpass-compare = "firstpass.agents.compare:main"
firstpass-ceo = "firstpass.agents.ceo:main"
firstpass-project-property-manager = "firstpass.agents.project_property_manager:main"
firstpass-ceo-planner = "firstpass.agents.project_property_manager:main"
firstpass-visual = "firstpass.agents.visual:main"
firstpass-solutions = "firstpass.agents.solutions:main"
firstpass-kickoff = "firstpass.orchestrator:main"
firstpass-local = "firstpass.local_research:main"
firstpass-permit = "firstpass.permit.cli:main"
firstpass-permit-agent = "firstpass.agents.permit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/firstpass"]
